--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">myFirstApp</string>
+    <string name="first_app_label">this is first app</string>
     <string name="action_settings">Settings</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
@@ -18,4 +19,15 @@
     这样做的好处是：对于所有字符串值，字符串资源能够单独的修改，
     在资源文件里你可以很容易的找到并且做出相应的修改。
     通过选择定义每个字符串，还允许你用不同语言本地化 APP。-->
+
+
+    <!-- buttons -->
+    <string name="first_but_01">button01</string>
+    <string name="but_02">button02</string>
+
+
+    <!-- activities info -->
+
+
+    <!--  -->
 </resources>
